syntax = "proto3";

package messagingv1;

option go_package = "./messagingv1";

import "google/protobuf/empty.proto";

enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
}

message MessageRequest {
	int64 label = 1;
}

message MessageResponse {
	string label = 1;
	int64 created = 2;
}

message CheckResponse {
  ServingStatus status = 1;
}

message MapServingStatusResponse {
  map<int32, string> status = 1;
}

service MessageService {
	rpc UpdateMessage (MessageRequest) returns (MessageResponse) {}
	rpc CheckMessage (google.protobuf.Empty) returns (CheckResponse) {}
  rpc ListServingStatus (google.protobuf.Empty) returns (MapServingStatusResponse) {}
}